Refactored working version - needs intensive testing and formatting